force-app/main/default/objects/Express_Change_Broker_History__c/Express_Change_Broker_History__c.object-meta.xml
<CustomObject>
    <label>Express Change Broker History</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Express Change Broker History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>