force-app/main/default/objects/Express_Change_Broker_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Express Change Broker History</relationshipLabel>
    <relationshipName>Express_Change_Broker_History</relationshipName>
    <type>Lookup</type>
</CustomField>