force-app/main/default/objects/Express_Change_Broker_History__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>16768</length>
    <type>Html</type>
</CustomField>