force-app/main/default/objects/Express_Change_Broker_History__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Express Change Broker History</relationshipLabel>
    <relationshipName>Express_Change_Broker_History</relationshipName>
    <type>Lookup</type>
</CustomField>