force-app/main/default/objects/Express_Change_Broker_History__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <referenceTo>PVL_Express_Change_Broker_Form__c</referenceTo>
    <relationshipLabel>Express Change Broker History</relationshipLabel>
    <relationshipName>Express_Change_Broker_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>